--- a/src/pages/resources/Resources.css
+++ b/src/pages/resources/Resources.css
@@ -1,6 +1,5 @@
 .resources_wrapper {
   height: 100%;
-  overflow: scroll;
 }
 .top {
   text-align: center;
